--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\Ko Family\\Desktop\\Spring-CSM-2018\\HWK","type":"PROJECT","hints":{"PROJECT_NAME":"HWK"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\Ko Family\\Desktop\\Spring-CSM-2018\\HWK","type":"PROJECT","hints":{"PROJECT_NAME":"HWK"}},"ABSENT"]]
