--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\Ko Family\\Desktop\\Spring-CSM-2018\\M10","type":"PROJECT","hints":{"PROJECT_NAME":"M10"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\jfxrt.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Users\\Ko Family\\Desktop\\Spring-CSM-2018\\M10","type":"PROJECT","hints":{"PROJECT_NAME":"M10"}},"ABSENT"]]
